--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#adff00" />
 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Выборы лиги клубов"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Выборы лиги клубов</title>
   </head>
   <body>
     <div id="root"></div>
